--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-  "name": "tmeister/wp-api-jwt-auth",
+    "name": "arunchaitanyajami/wp-api-jwt-auth",
   "description": "A simple plugin to add JSON Web Token (JWT) Authentication to WP REST API.",
-  "homepage": "https://github.com/Tmeister/wp-api-jwt-auth/",
+  "homepage": "https://github.com/arunchaitanyajami/wp-jwt-auth/",
   "type": "wordpress-plugin",
   "license": "GPL-2.0+",
   "authors": [
       {
-          "name": "Enrique Chavez",
-          "homepage": "https://enriquechavez.co"
+          "name": "Arun Chaitanya Jami",
+          "homepage": "https://github.com/arunchaitanyajami"
       }
   ],
   "support": {
-      "issues": "https://github.com/Tmeister/wp-api-jwt-auth/issues",
-      "source": "https://github.com/Tmeister/wp-api-jwt-auth/"
+      "issues": "https://github.com/arunchaitanyajami/wp-jwt-auth/issues",
+      "source": "https://github.com/arunchaitanyajami/wp-jwt-auth/"
   },
   "config": {
       "vendor-dir": "includes/vendor"
