--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
       "issues": "https://github.com/arunchaitanyajami/wp-jwt-auth/issues",
       "source": "https://github.com/arunchaitanyajami/wp-jwt-auth/"
   },
-  "config": {
-      "vendor-dir": "includes/vendor"
-  },
   "require": {
       "php": ">=5.3",
       "composer/installers": "~1.0",
       "firebase/php-jwt": "^5.0.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "AJ\\": [ "includes/", "pointer/" ]
+    }
   },
   "require-dev": {
       "phpunit/phpunit": "^5.2",
