--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,14 @@
     "issues": "https://github.com/arunchaitanyajami/wp-jwt-auth/issues",
     "source": "https://github.com/arunchaitanyajami/wp-jwt-auth/"
   },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "git@github.com:arunchaitanyajami/wp-jwt-auth.git"
+    }
+  ],
   "require": {
-    "php": ">=5.3",
-    "composer/installers": "~1.0",
+    "php": ">=7.0",
     "firebase/php-jwt": "^5.0.0"
   },
   "autoload": {
