--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,76 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+# Define the jobs we want to run for this project
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  build:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: cimg/php:8.1-node
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+          name: Install Server Dependency
+          command: |
+            sudo apt-get update
+            sudo apt-get install git zip unzip subversion
+      - run:
+          name: Install Composer
+          command: |
+            curl -s https://getcomposer.org/installer | php
+            mv composer.phar /usr/local/bin/composer
+      - run:
+          name: Install production dependencies
+          command: |
+            composer validate
+            composer install --no-dev -o
+      - persist_to_workspace:
+          root: .
+          paths:
+            - vendor
+  php_lint:
+    docker:
+      - image: cimg/php:8.1-node
+    steps:
+      - checkout
+      - run:
+          name: Install Server Dependency
+          command: |
+            sudo apt-get update
+            sudo apt-get install git zip unzip subversion
+      - run:
+          name: Install Composer
+          command: |
+            curl -s https://getcomposer.org/installer | php
+            mv composer.phar /usr/local/bin/composer
+      - run:
+          name: Install Composer dependencies
+          command: |
+            composer validate
+            composer install --prefer-dist
+  build-main:
+    docker:
+      - image: cimg/base:2020.01
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - add_ssh_keys:
+          fingerprints:
+            - "d6:de:ae:4c:83:8b:ed:b5:ed:22:13:be:c2:d3:4b:cb"
+      - deploy:
+          name: Deploy -built branch to github
+          command: bash <(curl -s "https://raw.githubusercontent.com/Automattic/vip-go-build/master/deploy.sh")
+# Orchestrate our job run sequence.
 workflows:
-  say-hello-workflow:
+  version: 2
+  build_and_test:
     jobs:
-      - say-hello
+      - php_lint:
+          filters:
+            branches:
+              ignore: /.*-built/
+      - build:
+          requires:
+            - php_lint
+      - build-main:
+          requires:
+            - build
