--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "type": "wordpress-plugin",
   "minimum-stability": "stable",
   "prefer-stable" : true,
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "authors": [
     {
       "name": "Arun Chaitanya Jami",
